<resources>
    <string name="app_name">App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">首页</string>
    <string name="search">搜索</string>
    <string name="publish">发布</string>
    <string name="news_feed">动态</string>
    <string name="mine">我的</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
